Fix more contrast issues

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -214,7 +214,7 @@ h2 {
 
 .menu-icon,
 .close-icon {
-    filter: invert(71%) sepia(30%) saturate(560%) hue-rotate(281deg) brightness(102%) contrast(95%);
+    filter: invert(11%) sepia(85%) saturate(5214%) hue-rotate(313deg) brightness(81%) contrast(96%);
 }
 
 .close-icon {
